There was a problem with creating auctions, wasn't taking category

--- a/304Project/WebContent/shop.html
+++ b/304Project/WebContent/shop.html
@@ -33,7 +33,7 @@ function MM_preloadImages() { //v3.0
 
 
 <body style="background-color:#05060a;">
-<div id="container">
+<div class="center-div" id="container">
 		<div id="header">
         
         <a name="top">
@@ -43,12 +43,10 @@ function MM_preloadImages() { //v3.0
   </div>
 		<div class="Color" id="menu">
         	<ul>
-            	<li class="menuitem"><a href="">Home</a></li>
+            	<li class="menuitem"><a href="listprod.jsp">Products</a></li>
                 <li class="menuitem"><a href="">About</a></li>
                 <li class="menuitem"><a href="">Services</a></li>
                 <li class="menuitem"><a href="">Design</a></li>
-                <li class="menuitem"><a href="listprods.jsp">Products</a></li>
-                <li class="menuitem"><a href="showcart.jsp">Cart</a></li>
             </ul>
         </div>
                 
@@ -56,7 +54,6 @@ function MM_preloadImages() { //v3.0
         <div id="content_top" ></div>
         <div id="content_main" ><h1>Welcome the TSLRG Auctions Online Store!</h1>
           <p>&nbsp;</p>
-<h1 align="center">Welcome to TSLRG!</h1>
 
 <h2 align="center"><a href="listprod.jsp">Enter Site</a></h2>
 
